# Rust-Nfe-API

./: .gitignore  README.md
Exemplos/: import-nfe-ent.service.ts  nfe_ent-import.interface.ts
docs/: index.html
nfe/: .rustfmt.toml  Cargo.toml  nfe.rar  rust-toolchain.toml
nfe/examples/: test_ide.rs  test_item.rs  test_parse.rs
nfe/src/: builder.rs  lib.rs  main.rs
nfe/src/base/: dest.rs  emit.rs  endereco.rs  error.rs  mod.rs  municipios.rs  nfce.rs  nfse.rs  totais.rs  transporte.rs
nfe/src/base/ide/: emissao.rs  mod.rs
nfe/src/base/item/: mod.rs  produto.rs
nfe/src/base/item/imposto/: cofins.rs  cofins_st.rs  icms.rs  icms_uf_dest.rs  ii.rs  ipi.rs  issqn.rs  mod.rs  pis.rs  pis_st.rs
nfe/src/modelos/: mod.rs
nfe/src/modelos/nfe/: dest.rs  mod.rs
nfe/src/tests/: dest.rs  endereco.rs  ide.rs  infnfe.rs  itens.rs  mod.rs  parse.rs
web/: Cargo.toml
web/src/: lib.rs  main.rs
web/src/certificado/: a1.rs  assinatura.rs  mod.rs
web/src/db/: mod.rs  models.rs  mysql.rs  postgres.rs
web/src/graphql/: mod.rs  resolvers.rs  schema.rs  types.rs
web/src/pdf/: danfe.rs  mod.rs  reader.rs
web/src/sefaz/: consulta.rs  distribuicao.rs  inutilizacao.rs  manifesto.rs  mod.rs  webservice.rs
web/static/: index.html
