[package]
name = "nfe"
version = "0.1.0"
edition = "2021"
categories = ["data-structures", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_repr = "0.1"
derive_more = "0.99.16"
quick-xml = { version = "0.31.0", features = ["serialize"] }
serde_json = "1.0"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
serde-xml-rs = "0.6.0"
