[package]
name = "nfe-parser"
version = "0.2.0"
edition = "2021"
authors = ["Leonardo Matheus <contato@leonardomdev.me>"]
description = "Biblioteca Rust de alto desempenho para parsing e serialização de Nota Fiscal Eletrônica (NF-e) brasileira - Layout 4.00 SEFAZ"
license = "MIT"
repository = "https://github.com/leonardo-matheus/Rust-Nfe-API"
homepage = "https://github.com/leonardo-matheus/Rust-Nfe-API"
documentation = "https://docs.rs/nfe-parser"
readme = "../README.md"
keywords = ["nfe", "nfce", "sefaz", "xml", "brazil"]
categories = ["data-structures", "parser-implementations", "encoding"]
rust-version = "1.70"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_repr = "0.1"
derive_more = "0.99.16"
quick-xml = { version = "0.23.0", features = ["serialize"] }
serde_json = "1.0"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
serde-xml-rs = "0.6.0"
