[package]
name = "nfe-web"
version = "0.3.0"
edition = "2021"
authors = ["Leonardo Matheus <contato@leonardomdev.me>"]
description = "API REST/GraphQL de alto desempenho para NF-e com integracao SEFAZ, geracao de DANFE e suporte a certificado digital"
license = "MIT"
repository = "https://github.com/leonardo-matheus/Rust-Nfe-API"
homepage = "https://github.com/leonardo-matheus/Rust-Nfe-API"
documentation = "https://docs.rs/nfe-web"
readme = "../README.md"
keywords = ["nfe", "api", "rest", "graphql", "sefaz"]
categories = ["web-programming::http-server", "api-bindings"]
rust-version = "1.70"

[lib]
name = "nfe_web"
path = "src/lib.rs"

[[bin]]
name = "nfe-web"
path = "src/main.rs"

[dependencies]
# Biblioteca NFe local (para publicacao, usa versao do crates.io)
nfe-parser = { path = "../nfe", version = "0.3.0" }

# Web framework
actix-web = "4"
actix-files = "0.6"
actix-cors = "0.7"
actix-multipart = "0.7"

# GraphQL
async-graphql = "7"
async-graphql-actix-web = "7"

# Serialização
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.37", features = ["serialize"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Logging
env_logger = "0.11"
log = "0.4"
tracing = "0.1"

# Banco de dados
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "mysql", "chrono"] }

# PDF
printpdf = "0.7"
pdf-extract = "0.8"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Data/hora
chrono = { version = "0.4", features = ["serde"] }

# Base64
base64 = "0.22"

# Regex
regex = "1.10"

# Hex encoding
hex = "0.4"

# HTTP client (usando native-tls para Windows)
reqwest = { version = "0.12", features = ["json", "native-tls", "multipart"] }

# Criptografia e certificados digitais
sha2 = "0.10"
sha1 = "0.10"
rsa = { version = "0.9", features = ["sha2"] }
pkcs8 = { version = "0.10", features = ["pem", "encryption"] }
p12 = "0.6"
x509-cert = "0.2"
der = "0.7"
signature = "2.2"

# Cache e performance
dashmap = "6"
once_cell = "1.19"

# Compressão
flate2 = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
